fixed navbar margin issue on firefox and amended dropdown content to remove ref to undeveloped sections

--- a/static/css/_navbar.scss
+++ b/static/css/_navbar.scss
@@ -1,20 +1,40 @@
+nav {
+    width: 100%;
+    margin: auto;
+}
+
 .nav-link {
-    // margin-left: 2rem;
-    margin-right: 4rem;
+    // margin-right: 4rem;
     font-size: 1.5rem;
     @media (min-width: 768px) {
-        // margin-left: 5rem;
-        margin-right: 12rem;
+        // margin-right: 12rem;
     }
     @media (min-width: 992px) {
-        // margin-left: 10rem;
-        margin-right: 18rem;
+        // margin-right: 18rem;
         font-size: 2rem;
     }
     @media (min-width: 1200px) {
-        margin-right: 20rem;
+        // margin-right: 20rem;
     }
     
+}
+
+.nav-margin {
+    margin-right: 4rem;
+    margin-left: 4rem;
+    
+    @media (min-width: 768px) {
+        margin-right: 12rem;
+        margin-left: 12rem;
+    }
+    @media (min-width: 992px) {
+        margin-right: 18rem;
+        margin-left: 18rem;
+    }
+    @media (min-width: 1200px) {
+        margin-right: 20rem;
+        margin-left: 20rem;
+    }
 }
 
 .fa-sign-out-alt {
