--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -183,19 +183,31 @@ hr {
   width: 6rem;
   margin-top: 0; }
 
+nav {
+  width: 100%;
+  margin: auto; }
+
 .nav-link {
-  margin-right: 4rem;
   font-size: 1.5rem; }
-  @media (min-width: 768px) {
-    .nav-link {
-      margin-right: 12rem; } }
   @media (min-width: 992px) {
     .nav-link {
-      margin-right: 18rem;
       font-size: 2rem; } }
+
+.nav-margin {
+  margin-right: 4rem;
+  margin-left: 4rem; }
+  @media (min-width: 768px) {
+    .nav-margin {
+      margin-right: 12rem;
+      margin-left: 12rem; } }
+  @media (min-width: 992px) {
+    .nav-margin {
+      margin-right: 18rem;
+      margin-left: 18rem; } }
   @media (min-width: 1200px) {
-    .nav-link {
-      margin-right: 20rem; } }
+    .nav-margin {
+      margin-right: 20rem;
+      margin-left: 20rem; } }
 
 .fa-sign-out-alt {
   position: fixed;
